css/shanti-main.css
/* ... */
.shanti-filters table tbody{ border-top: none;}
.shanti-filters td{ white-space: nowrap;}
.shanti-filters table td:nth-child(2){ width:100%;}
.shanti-filters td .label{ color:#555;font-size: 0.88em;text-transform:uppercase;letter-spacing: -0.1rem;}
.shanti-filters td .count{ font-size: 0.88em; padding-right:1rem;text-transform:capitalize;}
.shanti-filters .view-filters-mb .views-exposed-widget{ position:relative;padding-right:3rem;}
.shanti-filters .ajax-progress{ /*display: inline;*/ position:absolute;top:1.35rem;right:0;}
.form-item-sort-bef-combine .btn{ width: 15rem;}
.form-item-sort-bef-combine label{ display: none;}
.form-item-sort-bef-combine .dropdown-menu.open .disabled{ background-color: #d0d0d0;}
table.pagerer { float:right;font-size:0.88em;text-transform:uppercase;position:relative;top:0.9rem;}
input.pagerer-page{ border-radius:2px; border:none;	font-size:0.88em; padding-top: 0.15rem;line-height:1.25em;color: #6d7afc; width:2.68em !important; -webkit-box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);border-collapse: separate;background-clip: padding-box;}
.pagerer-page:focus{background:#fff;color: rgba(32, 132, 131, 0.71);}
.pager{ text-align:right;float:right;position:relative;top:-1rem;right:1rem;}
.pager li{ color:#555; padding:0 1px; line-height:1em; font-family:'museo-sans-700',helvetica,arial,sans-serif;}
.pager li>a{ border:none;color:#aaa;padding:0.12em 0.5em;margin:0;background:transparent;border-radius:0.18em;background-clip: padding-box;	display:inline-block;position:relative;top:0;}
.pager li>a:hover,
.pager li>a:focus{ color:#333;-webkit-box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);box-shadow: 0 0 3px rgba(50, 50, 50, 0.4);border-collapse: separate;}
.pager li>a:active{ -webkit-box-shadow:none;box-shadow:none;}
.pager li>a .icon{ color:#999; position:relative; top: 0;}
.pager li>a:hover .icon,
.pager li>a:focus .icon{ color:#444;}
.pager .pager-first>a,
.pager .pager-last>a{ position:relative; top: 0.1rem;}
.pager .pager-last>a{ margin-right:1rem;}
.pager-first .icon,
.pager-previous .icon,
.pager-next .icon,
.pager-last .icon{ font-family:'shanticon';height:1em;width:1em;font-size:1em;color:#222;display:inline-block;background:transparent;}
.pager-first .icon:before{ content:'\e63d';}
.pager-previous .icon:before { content:'\e640';}
.pager-next .icon:before { content:'\e63f';}
.pager-last .icon:before { content:'\e63e';}
.pager .icon:before{ position:relative;top:0.1rem;}
.pager-first .icon,
.pager-last .icon{ font-size:1.25em;}
.pager-next{ margin-left:.5rem;}
.pager-previous{ margin-right:.5rem;}
/*--- END paging --*/




/***** BEGIN System Messages *****/
.content-section > .messages{ padding:0; border:none !important;}
.messages{ margin:0.32em 0 0.5em; padding:0; border:none;-webkit-box-shadow:0 0 3px #ccc;box-shadow:0 0 3px #ccc;border-collapse: separate;}
.messages ul{ margin: 0 0 0 1em; /* LTR */padding: 0;}
.messages ul li{ list-style-image: none !important;}
.messages > div{ padding: 10px 20px 10px 45px; background-position: 8px 8px;}
.messages a{ font-weight:bold;}
.messages a:hover{}
.warning,
.status,
.error{ border:3px solid #fff; padding:0 0.6rem 0.1rem;-webkit-box-shadow: inset 0 -1px 2px rgba(0,0,0, 0.1);box-shadow: inset 0 -1px 2px rgba(0,0,0, 0.1);border-collapse: separate;}
.warning{ color: #840; background: #fffce5;}
.status { color: #234600; background:#BAC9A9;}
.error { color: #8c2e0b; background:#fef5f1;border:3px solid #fff;}
.error p.error { color: #333;}
table tr.ok { color: #234600; background: #f8fff0;}
/*--- END System Messages ---*/




/*----- BEGIN accordion -----*/
/*-------------------------*/
.panel-group{ border:none;width:100%;margin-top:0;/*margin:-10px -20px 0 -2px;*/}
.panel-body{ background:#f9f9f9;border:none; border-radius:0; width:100%;}
.panel.panel-default { overflow:visible; background:transparent !important;}
.panel-default .panel-heading{ background-image: none; background: transparent;margin:0;padding:0;}
.panel-default>.panel-heading{ background:transparent !important;}
.panel-group .panel+.panel{ margin-top:0;}
.panel-group .panel{ border:none;-webkit-box-shadow:none;box-shadow:none;border-radius:0; width:100%; /* background:white; */margin:0;padding:0;-webkit-box-shadow:0 0 5px rgba(0,0,0, 0.125); box-shadow:0 0 5px rgba(0,0,0, 0.125); border-collapse:separate;}
.panel-group,
.panel-default .panel-heading+.panel-collapse .panel-body,
.panel-group .panel-heading+.panel-collapse .panel-body{ margin:0;border:none;}
.panel-group .panel+.panel{ margin-top:0;}
/*--- for larger toggle panels ---*/
.panel.panel-default h6{ text-transform:uppercase;font-size:1em; line-height:4em;border-top:1px solid #fff;border-bottom:1px solid #ccc;margin:0;height:60px;}
.panel.panel-default h6 a { color:#444;border:none;display:block;padding-left:2rem;}
.panel.panel-default h6 .glyphicon { font-size: 0.63em; margin-right:9px;background: #fff;color: #444; width:18px;height:18px;display: block;border-radius: 50%;background-clip: padding-box;float:left;position:relative;top: 19px;left: 0;-webkit-box-shadow: 0 0 4px 3px #ddd;box-shadow: 0 0 4px 3px #ddd;border-collapse:separate;}
.panel.panel-default .accordion-toggle .glyphicon:before { position: relative;top: 4px;left: 5px;}
.panel.panel-default .accordion-toggle .glyphicon.glyphicon-minus:before { position: relative;left: 4px;}

.panel.field-group-fieldset{ margin-bottom:0;}
/* END accordion */


/*
ul.search-results > div,
ul.shanti-gallery > div{
	display:inline;
	float:left;
}
*/

.search-results a,
.search-results a:hover{ color:#555; border:none !important; 	display:block;}

#block-system-main.block.block-system{ float:left;width:100%;}
body.page-admin-modules #block-system-main.block.block-system{ float:none;}

/*--- testing - transcripts search results but should apply across site */
.page-search .form-item.form-type-checkbox.form-item-retain-filters{   display:none; /* temporary hide */  margin:0;position:relative;top:-0.8rem;}
/* ... */

